better location for cobalt

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
           <br>
           <br>
           <br>
-          <p><a href="https://serialport.org/servers/cobalt/cobalt-raq-3/"><img src="/img/cobalt.gif"
+          <p><a href="https://serialport.org/servers/cobalt/cobalt-raq-3/"><img src="{{site.baseurl}}{{ site.cobalt }}"
                 alt="cobalt raq3 image" width="40%"></a></p>
           <a href="https://serialport.org/servers/cobalt/cobalt-raq-3/" class="container content-section text-center"
             style="font-size: 1em;">Proudly running on a Cobalt RaQ 3</a>
